--- a/client/stack_site.jade
+++ b/client/stack_site.jade
@@ -98,11 +98,11 @@ template(name='site_page')
                                     // if skv_is 'view_detail' true
                                     i.tag.grey.icon
                                     |#{tags.length}
-                                    // each tags
-                                    //     .ui.small.label #{this}
+                                    each tags
+                                        .ui.small.label #{this}
                                     .ui.horizontal.list
                                         with owner
-                                            a.ui.small.header.item(href="/site/#{current_doc.site}/user/#{user_id}")
+                                            a.ui.small.header.item(href="/site/#{../site}/user/#{user_id}")
                                                 img.ui.avatar.image(src=profile_image)
                                                 |#{display_name}
                                                 small #{reputation}
@@ -175,6 +175,7 @@ template(name='site_users')
                     a.ui.large.basic.icon.button(href=site_url)
                         // |#{site_url}
                         i.external.icon
+                    +print_this
                     .ui.large.button(href="/site/#{site}/questions")
                         |questions
                     .ui.large.button(href="/site/#{site}/users")
