--- a/parts/nav.jade
+++ b/parts/nav.jade
@@ -12,6 +12,8 @@ template(name='nav')
                 i.large.users.icon
             a.icon.disabled.item(href='/tags')
                 i.large.tags.icon
+            a.icon.disabled.item(href='/badges')
+                i.large.certificate.icon
             // a.icon.disabled.item(href='/')
             // a.icon.disabled.item(href='/images')
             //     i.large.image.icon
