--- a/parts/nav.jade
+++ b/parts/nav.jade
@@ -4,15 +4,15 @@ template(name='nav')
         // a.icon.header.item.pointer.toggle_leftbar
         //     i.bars.large.grey.icon
         if connected
-            a.icon.item(href='/')
+            a.icon.item.home2(href='/')
                 i.big.yin.yang.icon
             // a.icon.item(href='/stack' data-tab='groups')
             //     i.large.stack.fire.icon
-            a.icon.item(href='/users')
+            a.icon.item.users(href='/users')
                 i.large.users.icon
-            a.icon.disabled.item(href='/tags')
+            a.icon.disabled.item.tags(href='/tags')
                 i.large.tags.icon
-            a.icon.disabled.item(href='/badges')
+            a.icon.disabled.item.badges(href='/badges')
                 i.large.certificate.icon
             // a.icon.disabled.item(href='/')
             // a.icon.disabled.item(href='/images')
