--- a/client/site.jade
+++ b/client/site.jade
@@ -5,7 +5,7 @@ template(name='site_page')
                 .four.wide.column
                     // a.ui.circular.icon.button(href='/')
                     //     i.large.home.icon
-                    img(src=logo_url class=currentUser.invert_class)
+                    img.get_info(src=logo_url class=currentUser.invert_class)
                     // img(src=icon_url)
                     // .ui.segment(style="background-color:#{styling.tag_background_color}")
                     // .ui.label #{tag_background_color}: tag_background_color
@@ -23,9 +23,6 @@ template(name='site_page')
                             // .item site_url: #{site_url}
                     // a(href="https://www.twitter.com/#{twitter_account}" target='_window' title=twitter_account)
                     //     i.large.link.twitter.icon
-                    a.ui.basic.icon.button(href=site_url target="_window")
-                        // |#{site_url}
-                        i.external.icon
                     // a.ui.large.button(href="/site/#{site}/questions")
                     //     i.question.icon
                     //     |questions
@@ -36,15 +33,34 @@ template(name='site_page')
                     //     i.tags.icon
                     //     |tags
                     .ui.list.mobile.hidden
-                        // .item #{launch_date} launch_date
-                        // .item #{open_beta_date} open_beta_date
-                        // .item #{closed_beta_date} closed_beta_date
-                        // .item #{site_state} site_state
+                        a.item(href=site_url target="_window")
+                            |#{site_url}
+                            i.external.icon
+                        .item open beta {{ufrom open_beta_date}}
+                        .item closed beta {{ufrom closed_beta_date}}
+                        .item launched {{ufrom launch_date}}
+                        .item state: #{site_state}
                         // .item #{high_resolution_icon_url} high_resolution_icon_url
                         // .item #{favicon_url} favicon_url
-                        .item #{audience}
-                        // .item #{api_site_parameter} api_site_parameter
+                        .item 
+                            strong #{audience}
+                        // .item #{api_site_parameter} api
                         // .item #{site_type} site_type
+                        .item main emotion: #{main_emotion}
+                        .item new_active_users: #{new_active_users}
+                        .item total_users: #{total_users}
+                        .item badges_per_minute: #{badges_per_minute}
+                        .item total_badges: #{total_badges}
+                        .item total_votes: #{total_votes}
+                        .item total_comments: #{total_comments}
+                        .item answers_per_minute: #{answers_per_minute}
+                        .item questions_per_minute: #{questions_per_minute}
+                        .item total_answers: #{total_answers}
+                        .item total_accepted: #{total_accepted}
+                        .item total_unanswered: #{total_unanswered}
+                        .item total_questions: #{total_questions}
+                        .item api_revision: #{api_revision}
+                        
                     if in_dev
                         +array_edit k='tags' d=true
                     .ui.small.dividing.grey.header 
